--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+
+# https://intellij-support.jetbrains.com/hc/en-us/articles/206544839-How-to-manage-projects-under-Version-Control-Systems
+# https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+/.idea/libraries
+/.idea/caches
+.idea/dictionaries
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
